# CSD-Proiect

./: .gitmodules  CMakeLists.txt  build.sh  buildClient.sh  buildCurlPP.sh  buildRestbed.sh  buildYaml.sh  configure.sh  configureClient.sh  main.cpp  pi.txt  run.sh  runClient.sh  settings.yaml  test.cpp  testFile.txt
C++Server/: CMakeLists.txt  Server.cpp  Server.h  Service.cpp  Service.h
Client/: CMakeLists.txt  main.cpp
Client/builddir/: CMakeCache.txt  Client  ClientComm  Makefile  cmake_install.cmake
Client/builddir/utilities/: Makefile  cmake_install.cmake
Client/builddir/yamlReader/: Makefile  cmake_install.cmake
Client/dependencies/curlpp/builddir/: cmake_install.cmake  libcurlpp.so.1.0.0
Client/dependencies/curlpp/builddir/extras/: cmake_install.cmake
Client/utilities/: CMakeLists.txt  Utilities.cpp  Utilities.h
Client/yamlReader/: Settings.cpp  Settings.h
EncryptionDecryption/: BlowFish.cpp  BlowFish.h  Blowfish.cpp  CMakeLists.txt  Sbox1.txt  Sbox2.txt  Sbox3.txt  Sbox4.txt
builddir/: CMakeCache.txt  Makefile  SHARE_ENCRYPTED  cmake_install.cmake
builddir/C++Server/: Makefile  cmake_install.cmake
builddir/EncryptionDecryption/: Makefile  cmake_install.cmake
builddir/yamlReader/: Makefile  cmake_install.cmake
data/: test.txt
yamlReader/: CMakeLists.txt  Settings.cpp  Settings.h
